# PyRick

./: .editorconfig  .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
notes/: exports.md  monorepo.md
scripts/: version-bump.py
src/rickosborne/vote/: README.md  first_past_the_post.py  fix_ranks.py  pyproject.toml
src/rickosborne/vote/tests/: test_first_past_the_post.py
src/rickosborne_vote/: Manifest.in  README.md  comparators.py  pyproject.toml
src/rickosborne_vote/tests/: test_approval.py  test_candidate.py
