[build-system]
requires = ["hatchling==1.28.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
version_scheme = "calver-by-date"
version_file = "packages/__version__.py"
version_file_template = "__version__ = \"{version}\""

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
rickosborne_vote = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "basedpyright==1.38.1",
    "ruff==0.15.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "semver==3.0.4",
]

# I cannot figure out how to get basedpyright to see the editable imports.
[tool.pyright]
reportMissingTypeStubs = false
strict = ["**/*.py"]
